--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "node-app",
+  "name": "clean-project",
   "version": "1.0.0",
-  "description": "A simple Node.js application",
-  "main": "app.js",
+  "description": "Clean package for testing security tools",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.18.2"
   }
 }
