--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -81,11 +81,21 @@ jobs:
       - name: Trivy FileSystem Scan
         run: trivy fs . --format json -o trivy-fs.json
 
-      - name: Build Docker image (for Trivy image scan)
-        run: docker build -t projectscgh:latest .
+      - name: Build Docker image (only if .jar exists)
+        run: |
+          if ls target/*.jar 1> /dev/null 2>&1; then
+            docker build -t projectscgh:latest .
+          else
+            echo "⚠️ No JAR file found in target/. Skipping Docker build."
+          fi
 
-      - name: Trivy Image Scan
-        run: trivy image projectscgh:latest --format json -o trivy-image.json
+      - name: Trivy Docker Image Scan (only if image exists)
+        run: |
+          if docker image inspect projectscgh:latest > /dev/null 2>&1; then
+            trivy image projectscgh:latest --format json -o trivy-image.json
+          else
+            echo "⚠️ No Docker image found. Skipping Trivy image scan."
+          fi
 
       - name: Generate Markdown Report (Trivy + Snyk + Sonar)
         env:
@@ -108,7 +118,6 @@ jobs:
           git config --global user.email "actions@github.com"
           git checkout main
           git pull origin main
-          git add security-report.md
+          git add -f security-report.md
           git commit -m "🛡️ Add latest security scan report"
           git push https://x-access-token:$GH_TOKEN@github.com/PhuHuynh197/ProjectSCGH2.git main
-
