--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,38 +19,57 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Compile with Maven
-        run: mvn clean compile
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies if any (Python)
+        run: |
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+      - name: Compile with Maven (if Java project)
+        run: |
+          if [ -f pom.xml ]; then mvn clean compile; fi
 
   sonarcloud-scan:
     runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-      - name: Run SonarCloud Analysis
-        run: mvn clean verify sonar:sonar -Dsonar.projectKey=PhuHuynh197_ProjectSCGH2 -Dsonar.organization=phuhuynh197 -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+
+      - name: SonarCloud Analysis
+        run: |
+          mvn clean verify sonar:sonar \
+            -Dsonar.projectKey=PhuHuynh197_ProjectSCGH2 \
+            -Dsonar.organization=phuhuynh197 \
+            -Dsonar.host.url=https://sonarcloud.io \
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
   snyk-scan:
     runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Snyk
+
+      - name: Snyk Multi-Project Scan
         uses: snyk/actions/maven@master
         continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           command: code test
-          args: --all-projects --sarif-file-output=snyk.sarif
+          args: --all-projects --detection-depth=4 --sarif-file-output=snyk.sarif
 
-      - name: Count vulnerabilities from Snyk report
+      - name: Count vulnerabilities from Snyk
         run: |
           sudo apt-get install jq -y
           RESULTS_LENGTH=$(jq '.runs[0].results | length' snyk.sarif)
@@ -81,20 +100,16 @@ jobs:
       - name: Trivy FileSystem Scan
         run: trivy fs . --format json -o trivy-fs.json
 
-      - name: Build Docker image (only if .jar exists)
+      - name: Build Docker image
         run: |
-          if ls target/*.jar 1> /dev/null 2>&1; then
-            docker build -t projectscgh:latest .
-          else
-            echo "⚠️ No JAR file found in target/. Skipping Docker build."
-          fi
+          docker build -t projectscgh:latest . || echo "Skip docker build if no Dockerfile"
 
-      - name: Trivy Docker Image Scan (only if image exists)
+      - name: Trivy Docker Image Scan
         run: |
-          if docker image inspect projectscgh:latest > /dev/null 2>&1; then
+          if [ -f Dockerfile ]; then
             trivy image projectscgh:latest --format json -o trivy-image.json
           else
-            echo "⚠️ No Docker image found. Skipping Trivy image scan."
+            echo "No Dockerfile found, skipping image scan."
           fi
 
       - name: Generate Markdown Report (Trivy + Snyk + Sonar)
@@ -104,13 +119,13 @@ jobs:
           chmod +x generate-security-report.sh
           ./generate-security-report.sh
 
-      - name: Upload Security Report Artifact
+      - name: Upload security-report.md
         uses: actions/upload-artifact@v4
         with:
           name: security-report
           path: security-report.md
 
-      - name: Commit security report to repo
+      - name: Commit security report
         env:
           GH_TOKEN: ${{ secrets.GH_PAT }}
         run: |
@@ -121,4 +136,3 @@ jobs:
           git add -f security-report.md
           git commit -m "🛡️ Add latest security scan report"
           git push https://x-access-token:$GH_TOKEN@github.com/PhuHuynh197/ProjectSCGH2.git main
-
