--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -100,9 +100,13 @@ jobs:
       - name: Trivy FileSystem Scan
         run: trivy fs . --format json -o trivy-fs.json
 
-      - name: Build Docker image
+      - name: Build Docker image (only if .jar exists)
         run: |
-          docker build -t projectscgh:latest . || echo "Skip docker build if no Dockerfile"
+          if ls target/*.jar 1> /dev/null 2>&1; then
+            docker build -t projectscgh:local .
+          else
+            echo "⚠️ No JAR file found in target/. Skipping Docker build."
+          fi
 
       - name: Trivy Docker Image Scan
         run: |
