--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -24,8 +24,41 @@ jobs:
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: Fail job if SonarCloud found any issues
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          # Lấy key từ file nếu có
+          if [ -f sonar-project.properties ]; then
+            COMPONENT_KEY=$(grep "^sonar.projectKey=" sonar-project.properties | cut -d= -f2)
+          else
+            COMPONENT_KEY="PhuHuynh197_ProjectSCGH2"
+          fi
+
+          # Gọi API lấy đầy đủ metrics
+          API_URL="https://sonarcloud.io/api/measures/component?component=${COMPONENT_KEY}&metricKeys=bugs,vulnerabilities,security_hotspots"
+          RESPONSE=$(curl -s -u "${SONAR_TOKEN}:" "$API_URL")
+
+          echo "SonarCloud API response:"
+          echo "$RESPONSE"
+
+          # Parse từng metric
+          BUGS=$(echo "$RESPONSE" | jq -r '.component.measures[] | select(.metric == "bugs") | .value // "0"')
+          VULNS=$(echo "$RESPONSE" | jq -r '.component.measures[] | select(.metric == "vulnerabilities") | .value // "0"')
+          HOTSPOTS=$(echo "$RESPONSE" | jq -r '.component.measures[] | select(.metric == "security_hotspots") | .value // "0"')
+
+          echo "Bugs: $BUGS"
+          echo "Vulnerabilities: $VULNS"
+          echo "Security Hotspots: $HOTSPOTS"
+
+          # Fail nếu bất kỳ chỉ số nào > 0
+          if [ "$BUGS" != "0" ] || [ "$VULNS" != "0" ] || [ "$HOTSPOTS" != "0" ]; then
+            echo "Found issues! Failing job."
+            exit 1
+          fi
 
       - name: Generate Markdown Report (Trivy + Snyk + Sonar)
+        if: always()
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
@@ -33,12 +66,14 @@ jobs:
           ./generate-security-report.sh
 
       - name: Upload security-report.md
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: security-report
           path: security-report.md
 
       - name: Commit security report
+        if: always()
         run: |
           git clone https://x-access-token:${{ secrets.GH_PAT }}@github.com/PhuHuynh197/Security-Report.git dest-repo
           cp security-report.md dest-repo/
