--- a/.github/workflows/02-dockle-trivy.yml
+++ b/.github/workflows/02-dockle-trivy.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t projectscgh2:latest .
+          docker build -t projectscgh:latest .
 
       - name: Prepare security folder
         run: mkdir -p security
