--- a/.github/workflows/03-hadolint.yml
+++ b/.github/workflows/03-hadolint.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: ["main", "**"]
   pull_request:
+    branches: ["main", "**"]  
   workflow_dispatch:
 
 jobs:
@@ -22,7 +23,13 @@ jobs:
 
       - name: Run Hadolint
         run: |
-          hadolint Dockerfile > hadolint-report.txt || true
+          hadolint Dockerfile | tee hadolint-report.txt
+          ERROR_COUNT=$(grep -E '^DL|^SC' hadolint-report.txt | wc -l)
+          echo "Hadolint error count: $ERROR_COUNT"
+          if [ "$ERROR_COUNT" -gt 0 ]; then
+            echo "::error::Hadolint found Dockerfile configuration issues."
+            exit 1
+          fi
 
       - name: Upload Hadolint report
         if: always()
