--- a/.github/workflows/02-dockle-trivy.yml
+++ b/.github/workflows/02-dockle-trivy.yml
@@ -7,6 +7,9 @@ on:
   pull_request:
     branches: ["main", "**"]
 
+permissions:
+  contents: read
+
 jobs:
   container-security:
     runs-on: ubuntu-latest
